--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Replace the standard post tag meta box with a category-style checklist (checkboxes).",
     "type": "wordpress-plugin",
     "require": {
-        "php": "^5.4"
+        "php": "^5.4 || ^7.0"
     },
     "license": "GPL-3.0+",
     "authors": [
